httpserver3/k8s-mainfest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order-pizza
  name: order-pizza
  namespace: exercise
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-pizza
  template:
    metadata:
      labels:
        app: order-pizza
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: cloud.google.com/gke-nodepool
                operator: In
                values:
                - app-pool
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - order-pizza
            topologyKey: kubernetes.io/hostname
      containers:
      - env:
        - name: AGENT_HOST
          valueFrom:
            fieldRef:
              fieldPath: status.hostIP
        image: asia.gcr.io/devops-apac-mgmt/exercise-pizza:1.0.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 40
        name: app
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 20
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
      tolerations:
      - effect: NoSchedule
        key: app
        operator: Equal
        value: "true"
