httpserver3/k8s-mainfest/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lr-nginx
  namespace: exercise
spec:
  selector:
    matchLabels:
      run: mynginx
  replicas: 1
  template:
    metadata:
      labels:
        run: mynginx
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-svc
  name: nginx-svc
  namespace: exercise
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: mynginx
  type: NodePort
---
# add externalName type svc in dmz namespace, so that Ingress (in dmz) can point to this svc
apiVersion: v1
kind: Service
metadata:
  name:  nginx-ext-svc
  namespace: dmz
spec:
  type: ExternalName
  externalName: nginx-svc.exercise.svc.cluster.local
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    run: mynginx
