httpserver3/k8s-mainfest/ingress-resource.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2

    # Whitelist office source range, add 0.0.0.0/0 temporary for teacher to test
    nginx.ingress.kubernetes.io/whitelist-source-range: | 
      4.14.111.230/32,64.124.130.196/32,0.0.0.0/0

  name: ingress-exercise
  namespace: dmz
spec:
  rules:
  - host: exercise.audiencecuration.ai
    http:
      paths:
      - backend:
          service:
            name: order-pizza-ext-svc
            port:
              number: 8080
        path: /exercise(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: nginx-ext-svc
            port:
              number: 8080
        path: /nginx(/|$)(.*)
        pathType: Prefix
  tls:
  - hosts:
    - exercise.audiencecuration.ai
    secretName: exercise-tls-secret
