httpserver3/k8s-mainfest/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: ingress-exercise
  namespace: dmz
spec:
  rules:
  - host: exercise.audiencecuration.ai
    http:
      paths:
      - backend:
          service:
            name: order-pizza-ext-svc
            port:
              number: 80
        path: /exercise(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: nginx-ext-svc
            port:
              number: 8080
        path: /nginx(/|$)(.*)
        pathType: Prefix
  tls:
  - hosts:
    - exercise.audiencecuration.ai
    secretName: tls-secret
